# robertparker_wine_reviews

./: .gitignore  README.html  README.md  pyproject.toml
docs/: doc.html  doc.qmd
src/: dashboard.py  main.py  reviews.py  scraper.py  settings.py
src/.streamlit/: config.toml
