[tool.poetry]
name = "wine"
version = "0.1.0"
description = ""
authors = ["Lisanne Sijtsma"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.10"
ipykernel = "^6.22.0"
quarto = "^0.1.0"
jupyter = "^1.0.0"
pydantic = "^1.10.7"
black = "^23.3.0"
loguru = "^0.7.0"

[tool.poetry.group.scraping.dependencies]
selenium = "^4.8.3"

[tool.poetry.group.mining.dependencies]
numpy = "^1.24.2"
pandas = "^2.0.0"
bs4 = "^0.0.1"

[tool.poetry.group.visualize.dependencies]
seaborn = "^0.12.2"
streamlit = "^1.13.0"
kaleido = "^0.1.0.post1"
chart-studio = "^1.1.0"
plotly = "^5.14.1"

[tool.poetry.group.analyze.dependencies]
statsmodels = "^0.13.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
